# slv-sip-factory

./: .gitignore  .gitmodules  Pipfile  create_sip.py  env.example  pyproject.toml  readme.md  requirements.txt  sip_file_renamer.py
.github/workflows/: run-unit-tests.yml
slv-sip-factory/: pyvenv.cfg
tests/: test_sip_file_renamer.py
tests/test_data/output/test-SIP_A_sip_with_hierarchy_20240430/content/: dc.xml  mets.xml
tests/test_data/output/test-SIP_An_example_sip_20240430/content/: mets.xml
tests/test_data/output_renamed/test-SIP_A_sip_with_hierarchy_20240430/content/: mets.xml
tests/test_data/output_renamed/test-SIP_An_example_sip_20240430/content/: dc.xml  mets.xml
tests/test_data/percent_output/content/: mets.xml
