[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "SLV-sip-factory"
dynamic = ["version"]
authors = {name = "Susannah Bourke", email = "sbourke@slv.vic.gov.au"}
readme = "readme.md"
dependencies = [
    'rosetta_sip_factory@git+https://github.com/StateLibraryVictoria/rosetta_sip_factory',
    'pymets@git+https://github.com/StateLibraryVictoria/pymets',
    'pydc@git+https://github.com/StateLibraryVictoria/pydc',
    'mets_dnx@git+https://github.com/StateLibraryVictoria/mets_dnx.git',
    'pydnx@git+https://github.com/StateLibraryVictoria/pydnx'
]